syntax='proto3';

package user;
service UserService{
    rpc login(UserLogin) returns(Result){}
    rpc getUser(UserLogin) returns(UserDetails){}
    rpc myLocation(Location) returns(LocationResponse){}
}
    message UserLogin{
        int32 userId = 1;
        string name = 2;
    }
    
    message Result{
        string result = 1;
        string message = 2;
    }

   message UserDetails{
        string result = 1;
    }

    message Location{
        int32 userId = 1;
        int32 aisle = 2;
        int32 shelf = 3;
    }

    message LocationResponse{
        string result = 1;
    }

